tests/cases/fail/with_non_file.p4
def main() -> None:
    with 1 as value:
        print(value)
